discussion/kv_engine/140922/140922_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: MB-42795: Switch magma memory accounting to use memory guards

Change-Id: Ia17996352f0a97c54bb06f06bd81a491d124577b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-11-24 20:34:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-24 20:52:40.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32052/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(491): error C2039: "ArenaClient": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32052/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27651/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27651/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5856/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32: error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.ArenaClient =
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5856/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32:
error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5856/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6368/ : FAILURE

Compile error at [2020-11-24T20:36:01.428Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6368/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7407/ : FAILURE

Compile error at [2020-11-24T20:36:13.838Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32:
error: ?struct magma::Magma::Config? has no member named ?ArenaClient?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7407/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15222/ : FAILURE

Compile error at [2020-11-24T20:38:11.970Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:491:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15222/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7666/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4390/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7293/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
